--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -2,6 +2,10 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=pango
 
+# [bar]
+# command=bar
+# interval=1
+
 [language]
 command=lang-toggle -v
 interval=once
