--- a/i3.conf
+++ b/i3.conf
@@ -11,7 +11,12 @@
 
 set $mod Mod4
 set $netrefresh --no-startup-id sudo -A systemctl restart NetworkManager
+
+# Border size
 for_window [class="^.*"] border pixel 2
+
+# Hide borders if only one window is in the current workspace
+hide_edge_borders smart
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
