--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,7 @@ set -g mouse on
 # Status bar
 set-option -g status-interval 10
 set-option -g status-right-length 120
-set -g status-right '#(i3blocks-battery -a) P:#(p n) #(date +"%b %d %I:%M %p") | #(hostname)'
+set -g status-right '#(bar2)'
 
 # Fish :)
 set-option -g default-shell /bin/fish
