--- a/tmux.conf
+++ b/tmux.conf
@@ -5,6 +5,8 @@ set -g mouse on
 set-option -g status-interval 10
 set-option -g status-right-length 120
 set -g status-right '#(bar2)'
+set -g status off
+bind T set -g status
 
 # Fish :)
 set-option -g default-shell /bin/fish
@@ -30,15 +32,6 @@ set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 # Plugin: resurrect
 set -g @resurrect-capture-pane-contents 'on'
-
-# Plugin: battery
-set -g @batt_charged_icon " "
-set -g @batt_charging_icon "~"
-set -g @batt_attached_icon " "
-set -g @batt_full_charge_icon " "
-set -g @batt_high_charge_icon " "
-set -g @batt_medium_charge_icon " "
-set -g @batt_low_charge_icon " "
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
