--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -19,9 +19,13 @@ interval=30
 command=i3blocks-weather
 interval=3600
 
+[sensors]
+command=i3blocks-sensor
+interval=5
+
 [volume]
-interval=once
 command=i3blocks-volume
+interval=once
 signal=10
 
 [brightness]
