--- a/i3.conf
+++ b/i3.conf
@@ -211,8 +211,12 @@ bindsym $mod+greater       exec --no-startup-id lmc next
 bindsym $mod+Shift+greater exec --no-startup-id lmc next
 
 # Screenshot
-bindsym Print       exec --no-startup-id scrot
-bindsym Shift+Print exec --no-startup-id scrot -u
+bindsym Print               exec --no-startup-id screenshot
+bindsym Control+Print       exec --no-startup-id screenshot -c
+bindsym Shift+Print         exec --no-startup-id screenshot -a
+bindsym Shift+Control+Print exec --no-startup-id screenshot -a -c
+bindsym $mod+Print          exec --no-startup-id screenshot -w
+bindsym $mod+Control+Print  exec --no-startup-id screenshot -w -c
 
 # #---Extra XF86 Keys---# #
 # These are the extra media keys that some keyboards have.
