bar, few other things

--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -2,41 +2,37 @@ command=/usr/lib/i3blocks/$BLOCK_NAME
 separator_block_width=20
 markup=pango
 
-# [bar]
-# command=bar
-# interval=1
-
 [language]
-command=lang-toggle -v
+command=bar lang
 interval=once
 signal=14
 
 [prayer]
-command=i3blocks-prayer
+command=bar pray
 interval=30
 
 [weather]
-command=i3blocks-weather
+command=weather-update; bar weat
 interval=3600
 
 [sensors]
-command=i3blocks-sensor
+command=bar sens
 interval=5
 
 [volume]
-command=i3blocks-volume
+command=bar volu
 interval=once
 signal=10
 
 [brightness]
-command=i3blocks-brightness
+command=bar brig
 interval=once
 signal=13
 
 [battery]
-command=i3blocks-battery
+command=bar batt
 interval=1
 
 [time]
-command=i3blocks-time
+command=bar time
 interval=1
