--- a/i3.conf
+++ b/i3.conf
@@ -314,5 +314,8 @@ exec compton
 # mouse setup
 exec setup-xinput
 
+# Hide the mouse cursor while typing
+exec xbanish
+
 # wallpaper
 exec_always --no-startup-id feh --bg-fill ~/.config/wall.png
