couple of things

--- a/i3.conf
+++ b/i3.conf
@@ -160,33 +160,6 @@ bindsym $mod+Shift+x exec --no-startup-id i3power
 bindsym $mod+b exec --no-startup-id $BROWSER
 
 # resize window (you can also use the mouse for that)
-mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
-
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
-}
-
-bindsym $mod+r mode "resize"
-
-# Another way to resize
 bindsym $mod+Control+Left resize shrink width 10 px or 10 ppt
 bindsym $mod+Control+Down resize grow height 10 px or 10 ppt
 bindsym $mod+Control+Up resize shrink height 10 px or 10 ppt
@@ -199,6 +172,15 @@ bar {
     position top
     separator_symbol " "
 }
+
+mode "bar" {
+     bindsym Right exec  --no-startup-id bar --select next
+     bindsym Left  exec  --no-startup-id bar --select prev
+     bindsym Return exec --no-startup-id bar --run; mode "default"
+     bindsym Escape exec --no-startup-id bar --select none; mode "default"
+}
+
+bindsym $mod+u mode "bar"
 
 # Volume keys
 bindsym $mod+plus          exec --no-startup-id lmc up 5
@@ -218,12 +200,19 @@ bindsym Shift+Control+Print exec --no-startup-id screenshot -a -c
 bindsym $mod+Print          exec --no-startup-id screenshot -w
 bindsym $mod+Control+Print  exec --no-startup-id screenshot -w -c
 
+# Mount / Unmount
+bindsym $mod+m       exec --no-startup-id dmenumount
+bindsym $mod+Shift+m exec --no-startup-id dmenuumount
+
 # #---Extra XF86 Keys---# #
 # These are the extra media keys that some keyboards have.
-bindsym XF86AudioMute		exec --no-startup-id lmc mute
-bindsym XF86AudioLowerVolume	exec --no-startup-id lmc down 5
-bindsym XF86AudioRaiseVolume	exec --no-startup-id lmc up 5
-bindsym XF86PowerOff		exec --no-startup-id prompt "Are you sure you want to shutdown?" "$shutdown"
+bindsym XF86AudioMute             exec --no-startup-id lmc mute
+bindsym XF86AudioLowerVolume      exec --no-startup-id lmc down 5
+bindsym XF86AudioRaiseVolume      exec --no-startup-id lmc up 5
+bindsym $mod+XF86AudioMute        exec --no-startup-id lmc pause
+bindsym $mod+XF86AudioLowerVolume exec --no-startup-id lmc prev
+bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id lmc next
+bindsym XF86PowerOff exec --no-startup-id prompt "Are you sure you want to shutdown?" "$shutdown"
 ##bindsym XF86Copy		exec
 ##bindsym XF86Open		exec
 ##bindsym XF86Paste		exec
@@ -246,9 +235,9 @@ bindsym XF86MyComputer		exec $term -e ranger
 ##bindsym XF86Forward		exec
 bindsym XF86Eject		exec --no-startup-id dmenuumount
 bindsym XF86AudioNext		exec --no-startup-id lmc next
-bindsym XF86AudioPlay		exec --no-startup-id lmc toggle
+bindsym XF86AudioPlay		exec --no-startup-id lmc pause
 bindsym XF86AudioPrev		exec --no-startup-id lmc prev
-bindsym XF86AudioStop		exec --no-startup-id lmc toggle
+bindsym XF86AudioStop		exec --no-startup-id lmc stop
 ##bindsym XF86AudioRecord
 bindsym XF86AudioRewind		exec --no-startup-id lmc back 10
 bindsym XF86AudioForward	exec --no-startup-id lmc forward 10
@@ -283,8 +272,8 @@ bindsym XF86Search		exec $BROWSER https://duckduckgo.com
 ##bindsym XF86Finance		exec
 ##bindsym XF86Game		exec
 bindsym XF86Shop		exec $BROWSER https://ebay.com
-bindsym XF86MonBrightnessDown	exec --no-startup-id i3brightness -dec 15
-bindsym XF86MonBrightnessUp	exec --no-startup-id i3brightness -inc 15
+bindsym XF86MonBrightnessDown	exec --no-startup-id brightness -dec 15
+bindsym XF86MonBrightnessUp	exec --no-startup-id brightness -inc 15
 bindsym XF86AudioMedia		exec --no-startup-id st -e ncmpcpp
 bindsym XF86Display		exec --no-startup-id arandr
 #bindsym XF86KbdLightOnOff	exec
