--- a/i3.conf
+++ b/i3.conf
@@ -49,7 +49,7 @@ bindsym $mod+Shift+Return exec $term; exec "bash -c 'sleep 0.2s;i3-msg floating 
 bindsym $mod+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenulauncher
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -154,7 +154,7 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 
 # Power
 bindsym $mod+x       exec --no-startup-id lockscreen
-bindsym $mod+Shift+x exec --no-startup-id i3power
+bindsym $mod+Shift+x exec --no-startup-id dmenupower
 
 # Browser
 bindsym $mod+b exec --no-startup-id $BROWSER
@@ -204,6 +204,12 @@ bindsym $mod+Control+Print  exec --no-startup-id screenshot -w -c
 bindsym $mod+m       exec --no-startup-id dmenumount
 bindsym $mod+Shift+m exec --no-startup-id dmenuumount
 
+# Display options
+bindsym $mod+s exec --no-startup-id dmenudisplay
+
+# Clipboard manager
+bindsym $mod+c exec --no-startup-id clipmenu
+
 # #---Extra XF86 Keys---# #
 # These are the extra media keys that some keyboards have.
 bindsym XF86AudioMute             exec --no-startup-id lmc mute
@@ -218,7 +224,7 @@ bindsym XF86PowerOff exec --no-startup-id prompt "Are you sure you want to shutd
 ##bindsym XF86Paste		exec
 ##bindsym XF86Cut		exec
 ##bindsym XF86MenuKB		exec
-bindsym XF86Calculator		exec $term -e R -q
+bindsym XF86Calculator		exec $term -e dropdowncalculator
 ##bindsym XF86Sleep		This binding is typically mapped by systemd automatically.
 ##bindsym XF86WakeUp		exec
 bindsym XF86Explorer		exec $term -e ranger
@@ -292,6 +298,9 @@ exec --no-startup-id nm-applet
 
 # Starts dunst for notifications:
 exec --no-startup-id dunst
+
+# Start the clipmenu daemon
+exec --no-startup-id clipmenud
 
 # conky
 exec conky -c ~/.conky/naheel/bin.rc
