couple of things

--- a/i3.conf
+++ b/i3.conf
@@ -210,6 +210,9 @@ bindsym $mod+s exec --no-startup-id dmenudisplay
 # Clipboard manager
 bindsym $mod+c exec --no-startup-id clipmenu
 
+# Common words
+bindsym $mod+w exec --no-startup-id dmenuwords
+
 # #---Extra XF86 Keys---# #
 # These are the extra media keys that some keyboards have.
 bindsym XF86AudioMute             exec --no-startup-id lmc mute
