--- a/i3.conf
+++ b/i3.conf
@@ -12,6 +12,22 @@
 set $mod Mod4
 set $netrefresh --no-startup-id sudo -A systemctl restart NetworkManager
 
+# Defining some colors
+set $color_bg   "#000000"
+set $color_blue "#285577"
+set $color_red  "#900000"
+set $color_gray "#333333"
+
+# Setting colors
+# class                 border  backgr. text    indicator child_border
+client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.unfocused        #333333 #222222 #888888 #292d2e   #111111
+client.urgent           #2f343a #900000 #ffffff #900000   #900000
+client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
+
+client.background       #ffffff
+
 # Border size
 for_window [class="^.*"] border pixel 2
 
@@ -20,11 +36,7 @@ hide_edge_borders smart
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Liberation Mono 13
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
+font pango:DejaVu Sans Mono 12.5
 
 # Before i3 v4.8, we used to recommend this one as the default:
 # font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
@@ -97,7 +109,7 @@ bindsym $mod+f fullscreen toggle
 bindsym $mod+t floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+Shift+t focus mode_toggle
+bindsym $mod+slash focus mode_toggle
 
 # change language
 bindsym $mod+space exec lang-toggle
@@ -110,15 +122,15 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
+set $ws1  "1"
+set $ws2  "2"
+set $ws3  "3"
+set $ws4  "4"
+set $ws5  "5"
+set $ws6  "6"
+set $ws7  "7"
+set $ws8  "8"
+set $ws9  "9"
 set $ws10 "10"
 
 # switch to workspace
@@ -134,16 +146,16 @@ bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws10
+bindsym $mod+Shift+1 move container to workspace $ws1;  workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2;  workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3;  workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4;  workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5;  workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6;  workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7;  workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8;  workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9;  workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10; workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -160,14 +172,27 @@ bindsym $mod+Shift+x exec --no-startup-id dmenupower
 bindsym $mod+b exec --no-startup-id $BROWSER
 
 # resize window (you can also use the mouse for that)
-bindsym $mod+Control+Left resize shrink width 10 px or 10 ppt
-bindsym $mod+Control+Down resize grow height 10 px or 10 ppt
-bindsym $mod+Control+Up resize shrink height 10 px or 10 ppt
-bindsym $mod+Control+Right resize grow width 10 px or 10 ppt
+bindsym $mod+Control+Left  resize shrink width  10 px or 10 ppt
+bindsym $mod+Control+Down  resize grow   height 10 px or 10 ppt
+bindsym $mod+Control+Up    resize shrink height 10 px or 10 ppt
+bindsym $mod+Control+Right resize grow   width  10 px or 10 ppt
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    colors {
+        # <colorclass>     <border>    <background> <text>
+        background         $color_bg
+        statusline         #ffffff
+        separator          #666666
+
+        focused_workspace  $color_blue $color_blue  #ffffff
+        active_workspace   $color_gray $color_gray  #ffffff
+        inactive_workspace $color_bg   $color_bg    #888888
+        urgent_workspace   $color_red  $color_red   #ffffff
+        binding_mode       $color_red  $color_red   #ffffff
+    }
+
     status_command i3blocks
     position top
     separator_symbol " "
@@ -283,7 +308,7 @@ bindsym XF86Search		exec $BROWSER https://duckduckgo.com
 bindsym XF86Shop		exec $BROWSER https://ebay.com
 bindsym XF86MonBrightnessDown	exec --no-startup-id brightness -dec 15
 bindsym XF86MonBrightnessUp	exec --no-startup-id brightness -inc 15
-bindsym XF86AudioMedia		exec --no-startup-id st -e ncmpcpp
+bindsym XF86AudioMedia		exec --no-startup-id $term -e cmus
 bindsym XF86Display		exec --no-startup-id arandr
 #bindsym XF86KbdLightOnOff	exec
 bindsym XF86KbdBrightnessDown	exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-lights.py -
