couple of things

--- a/compton.conf
+++ b/compton.conf
@@ -5,3 +5,33 @@ glx-no-stencil = true;
 glx-no-rebind-pixmap = true;
 vsync = "opengl-swc";
 unredir-if-possible = false;
+
+shadow = true;
+no-dnd-shadow = true;
+no-dock-shadow = true;
+clear-shadow = true;
+shadow-radius = 10;
+shadow-offset-x = 0;
+shadow-offset-y = 0;
+shadow-opacity = 0.5;
+shadow-ignore-shaped = true;
+
+shadow-exclude = [
+    # the first two rules is a dirthack to make my bar not have a shadow.
+    "x<=3 && x2>= 1500 && y <= 30 && y2 >=750",
+    "x = 0 && y = 0 && override_redirect = true",
+    # make sure tiled windows doesn't have a shadow, might be desired when
+    # using gaps.
+    "!I3_FLOATING_WINDOW@:c",
+    # these rules makes sure the window title bar doesn't have a shadow.
+    "class_g = 'i3-frame'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "name = 'Notification'",
+    "class_g = 'Conky'",
+    "class_g = 'Dunst'",
+    "class_g ?= 'Notify-osd'",
+    "class_g = 'Cairo-clock'",
+    "class_g = 'conky'",
+    "name = 'rofi'",
+    "name = 'cairo-dock-dialog'" 
+];
