couple of things

--- a/i3.conf
+++ b/i3.conf
@@ -21,7 +21,7 @@ set $color_gray "#333333"
 # Setting colors
 # class                 border  backgr. text    indicator child_border
 client.focused          #4c7899 #285577 #ffffff #2e9ef4   #285577
-client.focused_inactive #333333 #5f676a #ffffff #484e50   #5f676a
+client.focused_inactive #333333 #5f676a #ffffff #484e50   #222222
 client.unfocused        #333333 #222222 #888888 #292d2e   #111111
 client.urgent           #2f343a #900000 #ffffff #900000   #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000   #0c0c0c
@@ -49,7 +49,7 @@ font pango:DejaVu Sans Mono 12.5
 floating_modifier $mod
 
 # defining the terminal
-set $term "st"
+set $term "st -e tmux-quick"
 
 # start a terminal
 bindsym $mod+Return exec $term
@@ -177,8 +177,7 @@ bindsym $mod+Control+Down  resize grow   height 10 px or 10 ppt
 bindsym $mod+Control+Up    resize shrink height 10 px or 10 ppt
 bindsym $mod+Control+Right resize grow   width  10 px or 10 ppt
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
+# The original bar
 bar {
     colors {
         # <colorclass>     <border>    <background> <text>
@@ -192,11 +191,19 @@ bar {
         urgent_workspace   $color_red  $color_red   #ffffff
         binding_mode       $color_red  $color_red   #ffffff
     }
-
+    workspace_buttons yes
     status_command i3blocks
     position top
     separator_symbol " "
 }
+
+# The centered bar
+# bar {
+#     workspace_buttons no
+#     status_command i3blocks -c ~/.dotfiles/i3blocks-center.conf
+#     position top
+#     output eDP-1
+# }
 
 mode "bar" {
      bindsym Right exec  --no-startup-id bar --select next
@@ -252,10 +259,10 @@ bindsym XF86PowerOff exec --no-startup-id prompt "Are you sure you want to shutd
 ##bindsym XF86Paste		exec
 ##bindsym XF86Cut		exec
 ##bindsym XF86MenuKB		exec
-bindsym XF86Calculator		exec $term -e dropdowncalculator
+bindsym XF86Calculator		exec $term dropdowncalculator
 ##bindsym XF86Sleep		This binding is typically mapped by systemd automatically.
 ##bindsym XF86WakeUp		exec
-bindsym XF86Explorer		exec $term -e ranger
+bindsym XF86Explorer		exec $term ranger
 ##bindsym XF86Send		exec
 ##bindsym XF86Xfer		exec
 bindsym XF86WWW			exec --no-startup-id $BROWSER
@@ -264,7 +271,7 @@ bindsym XF86ScreenSaver		exec exec --no-startup-id lockscreen
 ##bindsym XF86RotateWindows	exec
 ##bindsym XF86TaskPane		exec
 ##bindsym XF86Favorites		exec
-bindsym XF86MyComputer		exec $term -e ranger
+bindsym XF86MyComputer		exec $term ranger
 ##bindsym XF86Back		exec
 ##bindsym XF86Forward		exec
 bindsym XF86Eject		exec --no-startup-id dmenuumount
@@ -299,8 +306,8 @@ bindsym XF86TouchpadOff		exec --no-startup-id synclient TouchpadOff=1
 bindsym XF86Suspend		exec --no-startup-id lockscreen
 bindsym XF86Close		kill
 bindsym XF86WebCam		exec --no-startup-id camtoggle
-bindsym XF86Mail		exec $term -e neomutt
-bindsym XF86Messenger		exec $term -e weechat
+bindsym XF86Mail		exec $term neomutt
+bindsym XF86Messenger		exec $term weechat
 bindsym XF86Search		exec $BROWSER https://duckduckgo.com
 ##bindsym XF86Go			exec
 ##bindsym XF86Finance		exec
@@ -308,7 +315,7 @@ bindsym XF86Search		exec $BROWSER https://duckduckgo.com
 bindsym XF86Shop		exec $BROWSER https://ebay.com
 bindsym XF86MonBrightnessDown	exec --no-startup-id brightness -dec 15
 bindsym XF86MonBrightnessUp	exec --no-startup-id brightness -inc 15
-bindsym XF86AudioMedia		exec --no-startup-id $term -e cmus
+bindsym XF86AudioMedia		exec --no-startup-id $term cmus
 bindsym XF86Display		exec --no-startup-id arandr
 #bindsym XF86KbdLightOnOff	exec
 bindsym XF86KbdBrightnessDown	exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-lights.py -
@@ -316,7 +323,7 @@ bindsym XF86KbdBrightnessUp	exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-li
 ##bindsym XF86Reply		exec
 ##bindsym XF86MailForward	exec
 ##bindsym XF86Save		exec
-bindsym XF86Documents		exec $term -e ranger ~/Documents
+bindsym XF86Documents		exec $term ranger ~/Documents
 ##bindsym XF86Battery		exec
 ##bindsym XF86Bluetooth		exec
 bindsym XF86WLAN		exec $netrefresh
