couple of things

--- a/i3.conf
+++ b/i3.conf
@@ -206,23 +206,16 @@ bar {
 # }
 
 mode "bar" {
-     bindsym Right exec  --no-startup-id bar --select next
-     bindsym Left  exec  --no-startup-id bar --select prev
+     bindsym Right  exec --no-startup-id bar --select next
+     bindsym Left   exec --no-startup-id bar --select prev
      bindsym Return exec --no-startup-id bar --run; mode "default"
      bindsym Escape exec --no-startup-id bar --select none; mode "default"
 }
 
 bindsym $mod+u mode "bar"
 
-# Volume keys
-bindsym $mod+plus          exec --no-startup-id lmc up 5
-bindsym $mod+Shift+plus    exec --no-startup-id lmc up 15
-bindsym $mod+minus         exec --no-startup-id lmc down 5
-bindsym $mod+Shift+minus   exec --no-startup-id lmc down 15
-bindsym $mod+less          exec --no-startup-id lmc prev
-bindsym $mod+Shift+less    exec --no-startup-id lmc replay
-bindsym $mod+greater       exec --no-startup-id lmc next
-bindsym $mod+Shift+greater exec --no-startup-id lmc next
+# Calculator
+bindsym $mod+plus exec --no-startup-id calc-floating
 
 # Screenshot
 bindsym Print               exec --no-startup-id screenshot
@@ -253,80 +246,80 @@ bindsym XF86AudioRaiseVolume      exec --no-startup-id lmc up 5
 bindsym $mod+XF86AudioMute        exec --no-startup-id lmc pause
 bindsym $mod+XF86AudioLowerVolume exec --no-startup-id lmc prev
 bindsym $mod+XF86AudioRaiseVolume exec --no-startup-id lmc next
-bindsym XF86PowerOff exec --no-startup-id prompt "Are you sure you want to shutdown?" "$shutdown"
-##bindsym XF86Copy		exec
-##bindsym XF86Open		exec
-##bindsym XF86Paste		exec
-##bindsym XF86Cut		exec
-##bindsym XF86MenuKB		exec
-bindsym XF86Calculator		exec $term dropdowncalculator
-##bindsym XF86Sleep		This binding is typically mapped by systemd automatically.
-##bindsym XF86WakeUp		exec
-bindsym XF86Explorer		exec $term ranger
-##bindsym XF86Send		exec
-##bindsym XF86Xfer		exec
-bindsym XF86WWW			exec --no-startup-id $BROWSER
-##bindsym XF86DOS		exec
-bindsym XF86ScreenSaver		exec exec --no-startup-id lockscreen
-##bindsym XF86RotateWindows	exec
-##bindsym XF86TaskPane		exec
-##bindsym XF86Favorites		exec
-bindsym XF86MyComputer		exec $term ranger
-##bindsym XF86Back		exec
-##bindsym XF86Forward		exec
-bindsym XF86Eject		exec --no-startup-id dmenuumount
-bindsym XF86AudioNext		exec --no-startup-id lmc next
-bindsym XF86AudioPlay		exec --no-startup-id lmc pause
-bindsym XF86AudioPrev		exec --no-startup-id lmc prev
-bindsym XF86AudioStop		exec --no-startup-id lmc stop
-##bindsym XF86AudioRecord
-bindsym XF86AudioRewind		exec --no-startup-id lmc back 10
-bindsym XF86AudioForward	exec --no-startup-id lmc forward 10
-##bindsym XF86Phone		exec
-##bindsym XF86Tools		exec
-bindsym XF86HomePage		exec $BROWSER https://www.duckduckgo.com
-bindsym XF86Reload		restart
-##bindsym XF86ScrollUp		exec
-##bindsym XF86ScrollDown		exec
-##bindsym XF86New		exec
-##bindsym XF86LaunchA		exec
-##bindsym XF86LaunchB		exec
-##bindsym XF86Launch2		exec
-##bindsym XF86Launch3		exec
-##bindsym XF86Launch4		exec
-##bindsym XF86Launch5		exec
-##bindsym XF86Launch6		exec
-##bindsym XF86Launch7		exec
-##bindsym XF86Launch8		exec
-##bindsym XF86Launch9		exec
-#bindsym XF86AudioMicMute	exec $micmute
-bindsym XF86TouchpadToggle	exec --no-startup-id toggletouchpad
-bindsym XF86TouchpadOn		exec --no-startup-id synclient TouchpadOff=0
-bindsym XF86TouchpadOff		exec --no-startup-id synclient TouchpadOff=1
-bindsym XF86Suspend		exec --no-startup-id lockscreen
-bindsym XF86Close		kill
-bindsym XF86WebCam		exec --no-startup-id camtoggle
-bindsym XF86Mail		exec $term neomutt
-bindsym XF86Messenger		exec $term weechat
-bindsym XF86Search		exec $BROWSER https://duckduckgo.com
-##bindsym XF86Go			exec
-##bindsym XF86Finance		exec
-##bindsym XF86Game		exec
-bindsym XF86Shop		exec $BROWSER https://ebay.com
-bindsym XF86MonBrightnessDown	exec --no-startup-id brightness -dec 15
-bindsym XF86MonBrightnessUp	exec --no-startup-id brightness -inc 15
-bindsym XF86AudioMedia		exec --no-startup-id $term cmus
-bindsym XF86Display		exec --no-startup-id arandr
-#bindsym XF86KbdLightOnOff	exec
-bindsym XF86KbdBrightnessDown	exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-lights.py -
-bindsym XF86KbdBrightnessUp	exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-lights.py +
-##bindsym XF86Reply		exec
-##bindsym XF86MailForward	exec
-##bindsym XF86Save		exec
-bindsym XF86Documents		exec $term ranger ~/Documents
-##bindsym XF86Battery		exec
-##bindsym XF86Bluetooth		exec
-bindsym XF86WLAN		exec $netrefresh
+bindsym XF86PowerOff              exec --no-startup-id dmenupower
+##bindsym XF86Copy                exec
+##bindsym XF86Open                exec
+##bindsym XF86Paste               exec
+##bindsym XF86Cut                 exec
+##bindsym XF86MenuKB              exec
+bindsym XF86Calculator            exec calc-float
+##bindsym XF86Sleep               # This binding is typically mapped by systemd automatically.
+##bindsym XF86WakeUp              exec
+bindsym XF86Explorer              exec $term ranger
+##bindsym XF86Send                exec
+##bindsym XF86Xfer                exec
+bindsym XF86WWW                   exec --no-startup-id $BROWSER
+##bindsym XF86DOS                 exec
+bindsym XF86ScreenSaver           exec exec --no-startup-id lockscreen
+##bindsym XF86RotateWindows       exec
+##bindsym XF86TaskPane            exec
+##bindsym XF86Favorites           exec
+bindsym XF86MyComputer            exec $term ranger
+##bindsym XF86Back                exec
+##bindsym XF86Forward             exec
+bindsym XF86Eject                 exec --no-startup-id dmenuumount
+bindsym XF86AudioNext             exec --no-startup-id lmc next
+bindsym XF86AudioPlay             exec --no-startup-id lmc pause
+bindsym XF86AudioPrev             exec --no-startup-id lmc prev
+bindsym XF86AudioStop             exec --no-startup-id lmc stop
+##bindsym XF86AudioRecord         exec
+bindsym XF86AudioRewind           exec --no-startup-id lmc back 10
+bindsym XF86AudioForward          exec --no-startup-id lmc forward 10
+##bindsym XF86Phone               exec
+##bindsym XF86Tools               exec
+bindsym XF86HomePage              exec $BROWSER https://www.duckduckgo.com
+bindsym XF86Reload                restart
+##bindsym XF86ScrollUp            exec
+##bindsym XF86ScrollDown          exec
+##bindsym XF86New                 exec
+##bindsym XF86LaunchA             exec
+##bindsym XF86LaunchB             exec
+##bindsym XF86Launch2             exec
+##bindsym XF86Launch3             exec
+##bindsym XF86Launch4             exec
+##bindsym XF86Launch5             exec
+##bindsym XF86Launch6             exec
+##bindsym XF86Launch7             exec
+##bindsym XF86Launch8             exec
+##bindsym XF86Launch9             exec
+#bindsym XF86AudioMicMute         exec $micmute
+bindsym XF86TouchpadToggle        exec --no-startup-id toggletouchpad
+bindsym XF86TouchpadOn            exec --no-startup-id synclient TouchpadOff=0
+bindsym XF86TouchpadOff           exec --no-startup-id synclient TouchpadOff=1
+bindsym XF86Suspend               exec --no-startup-id lockscreen
+bindsym XF86Close                 kill
+bindsym XF86WebCam                exec --no-startup-id camtoggle
+bindsym XF86Mail                  exec $term neomutt # TODO
+bindsym XF86Messenger             exec $term weechat # TODO
+bindsym XF86Search                exec $BROWSER https://duckduckgo.com
+##bindsym XF86Go                  exec
+##bindsym XF86Finance             exec
+##bindsym XF86Game                exec
+bindsym XF86Shop                  exec $BROWSER https://ebay.com
+bindsym XF86MonBrightnessDown     exec --no-startup-id brightness -dec 15
+bindsym XF86MonBrightnessUp       exec --no-startup-id brightness -inc 15
+bindsym XF86AudioMedia            exec --no-startup-id $term cmus
+bindsym XF86Display               exec --no-startup-id dmenudisplay
+#bindsym XF86KbdLightOnOff        exec
+bindsym XF86KbdBrightnessDown     exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-lights.py -
+bindsym XF86KbdBrightnessUp       exec --no-startup-id python3 $DOTFILES_SCRIPTS/kb-lights.py +
+##bindsym XF86Reply               exec
+##bindsym XF86MailForward         exec
+##bindsym XF86Save                exec
+bindsym XF86Documents             exec $term ranger ~/Documents
+##bindsym XF86Battery             exec
+##bindsym XF86Bluetooth           exec
+bindsym XF86WLAN                  exec $netrefresh
 
 # Network manager applet
 exec --no-startup-id nm-applet
