--- a/i3.conf
+++ b/i3.conf
@@ -49,13 +49,14 @@ font pango:DejaVu Sans Mono 12.5
 floating_modifier $mod
 
 # defining the terminal
-set $term "st -e tmux-quick"
+set $term "theterm"
 
 # start a terminal
-bindsym $mod+Return exec $term
-
-# start a floating terminal
-bindsym $mod+Shift+Return exec $term; exec "bash -c 'sleep 0.2s;i3-msg floating enable;i3-msg resize set 1100px 610px;i3-msg move position 100px 200px'"
+bindsym $mod+Return                        exec $term
+bindsym $mod+Control+Return       split t; exec $term
+bindsym $mod+Shift+Return                  exec st
+bindsym $mod+Shift+Control+Return split t; exec st
+#bindsym $mod+Shift+Return exec $term; exec "bash -c 'sleep 0.2s;i3-msg floating enable;i3-msg resize set 1100px 610px;i3-msg move position 100px 200px'"
 
 # kill focused window
 bindsym $mod+q kill
@@ -146,6 +147,18 @@ bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
+bindsym $mod+Control+1 move container to workspace $ws1;
+bindsym $mod+Control+2 move container to workspace $ws2;
+bindsym $mod+Control+3 move container to workspace $ws3;
+bindsym $mod+Control+4 move container to workspace $ws4;
+bindsym $mod+Control+5 move container to workspace $ws5;
+bindsym $mod+Control+6 move container to workspace $ws6;
+bindsym $mod+Control+7 move container to workspace $ws7;
+bindsym $mod+Control+8 move container to workspace $ws8;
+bindsym $mod+Control+9 move container to workspace $ws9;
+bindsym $mod+Control+0 move container to workspace $ws10;
+
+# move focused container to workspace and go there
 bindsym $mod+Shift+1 move container to workspace $ws1;  workspace $ws1
 bindsym $mod+Shift+2 move container to workspace $ws2;  workspace $ws2
 bindsym $mod+Shift+3 move container to workspace $ws3;  workspace $ws3
