--- a/compton.conf
+++ b/compton.conf
@@ -1,4 +1,3 @@
-# vim: filetype=conf
 backend = "glx"
 paint-on-overlay = true;
 glx-no-stencil = true;
@@ -28,10 +27,35 @@ shadow-exclude = [
     "_GTK_FRAME_EXTENTS@:c",
     "name = 'Notification'",
     "class_g = 'Conky'",
-    "class_g = 'Dunst'",
+    # "class_g = 'Dunst'",
     "class_g ?= 'Notify-osd'",
     "class_g = 'Cairo-clock'",
     "class_g = 'conky'",
     "name = 'rofi'",
     "name = 'cairo-dock-dialog'" 
 ];
+
+## Opacity
+##menu-opacity = 0.8;
+#opacity-rule = ["80:class_g = 'st-256color'"];
+##inactive-opacity = 0.8;
+##active-opacity = 1.0;
+##frame-opacity = 0.7;
+#inactive-opacity-override = false;
+#alpha-step = 0.06;
+##inactive-dim = 0.2;
+##inactive-dim-fixed = true;
+#blur-background = true;
+## blur-background-frame = true;
+#blur-kern = "7x7box";
+##blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
+##blur-background-fixed = true;
+##blur-rule = ["80:class_g = 'st-256color'"];
+##blur-background-exclude = [
+##    "window_type = 'dock'",
+##    "window_type = 'desktop'",
+##    "_GTK_FRAME_EXTENTS@:c",
+##    "class_g = 'Conky'",
+##    "class_g = 'conky'"
+##];
+
