couple of things

--- a/i3.conf
+++ b/i3.conf
@@ -251,6 +251,9 @@ bindsym $mod+c exec --no-startup-id clipmenu
 # Common words
 bindsym $mod+w exec --no-startup-id dmenuwords
 
+# Togggle opacity
+bindsym $mod+o exec --no-startup-id toggle-opacity
+
 # #---Extra XF86 Keys---# #
 # These are the extra media keys that some keyboards have.
 bindsym XF86AudioMute             exec --no-startup-id lmc mute
