--- a/i3.conf
+++ b/i3.conf
@@ -60,6 +60,8 @@ bindsym $mod+Shift+Control+Return split t; exec st
 
 # kill focused window
 bindsym $mod+q kill
+# ignore the tmux session (if is) and kill focused window
+bindsym $mod+Shift+q exec x-tmux-ignore && i3-msg kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenulauncher
