--- a/i3.conf
+++ b/i3.conf
@@ -220,14 +220,14 @@ bar {
 #     output eDP-1
 # }
 
-mode "bar" {
-     bindsym Right  exec --no-startup-id bar --select next
-     bindsym Left   exec --no-startup-id bar --select prev
-     bindsym Return exec --no-startup-id bar --run; mode "default"
-     bindsym Escape exec --no-startup-id bar --select none; mode "default"
-}
-
-bindsym $mod+u mode "bar"
+# mode "bar" {
+#      bindsym Right  exec --no-startup-id bar --select next
+#      bindsym Left   exec --no-startup-id bar --select prev
+#      bindsym Return exec --no-startup-id bar --run; mode "default"
+#      bindsym Escape exec --no-startup-id bar --select none; mode "default"
+# }
+# 
+# bindsym $mod+u mode "bar"
 
 # Calculator
 bindsym $mod+plus exec --no-startup-id calc-floating
@@ -252,6 +252,9 @@ bindsym $mod+c exec --no-startup-id clipmenu
 
 # Common words
 bindsym $mod+w exec --no-startup-id dmenuwords
+
+# Unicodes
+bindsym $mod+u exec --no-startup-id dmenuunicode
 
 # Togggle opacity
 bindsym $mod+o exec --no-startup-id toggle-opacity
