--- a/ranger/rifle.conf
+++ b/ranger/rifle.conf
@@ -54,6 +54,7 @@
 # Rarely installed browsers get higher priority; It is assumed that if you
 # install a rare browser, you probably use it.  Firefox/konqueror/w3m on the
 # other hand are often only installed as fallback browsers.
+ext x?html?, has browser,          X, flag f = browser -- "$@"
 ext x?html?, has surf,             X, flag f = surf -- file://"$1"
 ext x?html?, has vimprobable,      X, flag f = vimprobable -- "$@"
 ext x?html?, has vimprobable2,     X, flag f = vimprobable2 -- "$@"
@@ -140,13 +141,13 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+ext pdf, has evince,   X, flag f = evince -- "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
 ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
 ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
 ext pdf, has xpdf,     X, flag f = xpdf -- "$@"
-ext pdf, has evince,   X, flag f = evince -- "$@"
 ext pdf, has atril,    X, flag f = atril -- "$@"
 ext pdf, has okular,   X, flag f = okular -- "$@"
 ext pdf, has epdfview, X, flag f = epdfview -- "$@"
@@ -174,12 +175,12 @@ ext mobi, has ebook-viewer, X, flag f = ebook-viewer -- "$@"
 mime ^image/svg, has inkscape, X, flag f = inkscape -- "$@"
 mime ^image/svg, has display,  X, flag f = display -- "$@"
 
+mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has pqiv,      X, flag f = pqiv -- "$@"
 mime ^image, has sxiv,      X, flag f = sxiv -- "$@"
 mime ^image, has feh,       X, flag f = feh -- "$@"
 mime ^image, has mirage,    X, flag f = mirage -- "$@"
 mime ^image, has ristretto, X, flag f = ristretto "$@"
-mime ^image, has eog,       X, flag f = eog -- "$@"
 mime ^image, has eom,       X, flag f = eom -- "$@"
 mime ^image, has nomacs,    X, flag f = nomacs -- "$@"
 mime ^image, has geeqie,    X, flag f = geeqie -- "$@"
