--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -32,6 +32,11 @@ command=bar brig
 interval=once
 signal=3
 
+[wifi]
+command=bar wifi
+interval=5
+signal=9
+
 [battery]
 command=bar batt
 interval=1
