--- a/compton.conf
+++ b/compton.conf
@@ -63,7 +63,7 @@ no-dnd-shadow = true;
 # Avoid drawing shadows on dock/panel windows.
 no-dock-shadow = true;
 # Zero the part of the shadow's mask behind the window. Fix some weirdness with ARGB windows.
-clear-shadow = true;
+# clear-shadow = true;
 # The blur radius for shadows. (default 12)
 shadow-radius = 10;
 # The left offset for shadows. (default -15)
@@ -112,31 +112,31 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-menu-opacity = 1;
-inactive-opacity = 1;
-active-opacity = 1;
-frame-opacity = 1;
-inactive-opacity-override = false;
-alpha-step = 0.06;
-opacity-rule = [
-    "100:class_g = 'i3bar'",
-    "0:class_g = 'Empty.c.bin'",
-    "85:class_g = 'st-256color'",
-    "85:class_g = 'Emacs'"
-];
+# menu-opacity = 1;
+# inactive-opacity = 1;
+# active-opacity = 1;
+# frame-opacity = 1;
+# inactive-opacity-override = false;
+# alpha-step = 0.06;
+# opacity-rule = [
+#     "100:class_g = 'i3bar'",
+#     "0:class_g = 'Empty.c.bin'",
+#     "85:class_g = 'st-256color'",
+#     "85:class_g = 'Emacs'"
+# ];
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-blur-background = true;
+# blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
-blur-background-fixed = false;
-blur-kern = "7x7box";
-blur-background-exclude = "!(class_g = 'st-256color' || class_g = 'Emacs')";
+# blur-background-fixed = false;
+# blur-kern = "7x7box";
+# blur-background-exclude = "!(class_g = 'st-256color' || class_g = 'Emacs')";
 
 #################################
 #
@@ -197,7 +197,7 @@ vsync = "opengl-swc";
 # Reported to have no effect, though.
 dbe = false;
 # Painting on X Composite overlay window. Recommended.
-paint-on-overlay = true;
+# paint-on-overlay = true;
 
 # Limit compton to repaint at most once every 1 / refresh_rate second to boost performance.
 # This should not be used with --vsync drm/opengl/opengl-oml as they essentially does --sw-opti's job already,
