--- a/configs/nm-dmenu.ini
+++ b/configs/nm-dmenu.ini
@@ -1,6 +1,6 @@
 [dmenu]
 # fn = -*-terminus-medium-*-*-*-16-*-*-*-*-*-*-*
-# dmenu_command = /usr/bin/dmenu
+dmenu_command = menu-interface
 # # Note that dmenu_command can contain arguments as well like `rofi -width 30`
 # # Rofi and dmenu are set to case insensitive by default `-i`
 # l = number of lines to display, defaults to number of total network options
