--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -4,7 +4,7 @@ set -g mouse on
 # Status bar
 set-option -g status-interval 10
 set-option -g status-right-length 120
-set -g status-right '#(bar -a pray batt time host)'
+set -g status-right '#(bar -a pray batt clock host)'
 set -g status off
 bind T set -g status
 
