--- a/configs/gtk3-settings.ini
+++ b/configs/gtk3-settings.ini
@@ -15,4 +15,4 @@ gtk-xft-hintstyle=hintfull
 gtk-xft-rgba=rgb
 gtk-cursor-theme-name=Adwaita
 gtk-application-prefer-dark-theme=1
-gtk-decoration-layout=:close
+gtk-decoration-layout=
