--- a/configs/mpd.conf
+++ b/configs/mpd.conf
@@ -1,6 +1,6 @@
 db_file            "~/.config/mpd/database"
 log_file           "~/.config/mpd/log"
-music_directory    "~/Music/Music"
+music_directory    "~/Music"
 playlist_directory "~/.config/mpd/playlists"
 pid_file           "~/.config/mpd/pid"
 state_file         "~/.config/mpd/state"
