--- a/configs/compton.conf
+++ b/configs/compton.conf
@@ -238,3 +238,19 @@ wintypes:
         focus = true;
     };
 };
+
+#################################
+#
+# BlackCapCoder fork options
+#
+#################################
+
+transition-length = 50
+transition-pow-x = 1.5
+transition-pow-y = 1.5
+transition-pow-w = 1.5
+transition-pow-h = 1.5
+size-transition = true
+spawn-center-screen = false
+spawn-center = false
+no-scale-down = false
