--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -9,7 +9,7 @@ set -g status off
 bind T set -g status
 
 # Fish :)
-set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell /usr/bin/fish
 
 # Enable locking
 set -g lock-command vlock
