--- a/configs/ncmpcpp.conf
+++ b/configs/ncmpcpp.conf
@@ -1,8 +1,3 @@
-##############################################################################
-## This is the example configuration file. Copy it to $HOME/.ncmpcpp/config ##
-## or $XDG_CONFIG_HOME/ncmpcpp/config and set up your preferences.          ##
-##############################################################################
-#
 ##### directories ######
 ##
 ## Directory for storing ncmpcpp related files.  Changing it is useful if you
@@ -32,7 +27,7 @@
 ##
 mpd_music_dir = "~/Music"
 #
-#mpd_crossfade_time = 5
+mpd_crossfade_time = 2
 #
 ##### music visualizer #####
 ##
