--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -117,19 +117,19 @@ fade-delta = 2
 
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
-inactive-opacity = 1
-#inactive-opacity = 0.8;
+# inactive-opacity = 1;
+# inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
-# frame-opacity = 1.0
+# frame-opacity = 1.0;
 # frame-opacity = 0.7;
 
 # Default opacity for dropdown menus and popup menus. (0.0 - 1.0, defaults to 1.0)
-# menu-opacity = 1.0
+# menu-opacity = 1.0;
 
 # Let inactive opacity set by -i override the '_NET_WM_OPACITY' values of windows.
 # inactive-opacity-override = true
-inactive-opacity-override = false;
+# inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
 # active-opacity = 1.0
@@ -139,7 +139,7 @@ inactive-opacity-override = false;
 
 # Specify a list of conditions of windows that should always be considered focused.
 # focus-exclude = []
-focus-exclude = [ "class_g = 'Cairo-clock'" ];
+# focus-exclude = [ "class_g = 'Cairo-clock'" ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
 # inactive-dim-fixed = 1.0
@@ -152,7 +152,7 @@ focus-exclude = [ "class_g = 'Cairo-clock'" ];
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = [ "80:name *= 'i3lock'" ]
+opacity-rule = [ "80:name = 'i3lock'" ]
 
 
 #################################
@@ -414,11 +414,20 @@ log-level = "warn";
 #     set, and doesn't want certain window to cause unnecessary screen redirection, 
 #     you can set this to `true`.
 #
+# wintypes:
+# {
+#   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
+#   dock = { shadow = false; }
+#   dnd = { shadow = false; }
+#   popup_menu = { opacity = 0.8; }
+#   dropdown_menu = { opacity = 0.8; }
+# };
+
 wintypes:
 {
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 0.8; }
-  dropdown_menu = { opacity = 0.8; }
+  popup_menu = { opacity = 1; }
+  dropdown_menu = { opacity = 1; }
 };
