--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -1,22 +1,37 @@
+# Border size
 for_window [class="^.*"] border pixel 2
+
+# Floating windows
 for_window [class=.*__floatme__.*] floating enable
 for_window [title=.*__floatme__.*] floating enable
+
+# Sticking windows
 for_window [class=.*__stickme__.*] sticky enable
 for_window [title=.*__stickme__.*] sticky enable
 for_window [title=dragon] sticky enable
 
+# Hide borders if only one window is in the current workspace
 hide_edge_borders smart
+
+# Font for window titles. Will also be used by the bar unless a different font
 font pango:Iosevka Fixed 12.5
+
+# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier Mod4
+
+# Prevent mouse focus
 focus_follows_mouse no
 
-client.focused          #4c7899 #285577 #ffffff #2e9ef4 #285577
+# Setting colors
+# class                 border  backgr. text    indctr. child_border
+client.focused          #222222 #777777 #ffffff #ffffff #777777
 client.focused_inactive #333333 #5f676a #ffffff #484e50 #222222
 client.unfocused        #333333 #222222 #888888 #292d2e #111111
-client.urgent           #2f343a #900000 #ffffff #900000 #900000
+client.urgent           #333333 #900000 #ffffff #900000 #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000 #0c0c0c
 client.background       #ffffff
 
+# The top bar
 bar {
     workspace_buttons no
     status_command    bar lemon
@@ -26,14 +41,3 @@ bar {
 
 # No idea why, but at least one bind is needed
 bindsym Mod4+g focus up; focus down
-
-exec --no-startup-id dunst
-exec --no-startup-id clipmenud
-exec --no-startup-id setup-xinput
-exec --no-startup-id xbanish
-exec --no-startup-id syndaemon -i 0.5 -t -K -R
-exec --no-startup-id emacs-daemon
-exec_always --no-startup-id picom
-exec_always --no-startup-id setwallpaper
-exec_always --no-startup-id lang us
-exec_always --no-startup-id mount-private
