--- a/configs/ncmpcpp.conf
+++ b/configs/ncmpcpp.conf
@@ -468,7 +468,7 @@ ignore_leading_the = yes
 #
 #search_engine_default_search_mode = 1
 #
-external_editor = emacs-in
+external_editor = emx
 #
 ## Note: set to yes if external editor is a console application.
 ##
