--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -66,6 +66,7 @@ shadow-exclude = [
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
+  "class_g = 'lemonbar'",
   "_GTK_FRAME_EXTENTS@:c"
 ];
 
