--- a/configs/gtk3-settings.ini
+++ b/configs/gtk3-settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=AdwaitaRefresh-darker
 gtk-icon-theme-name=Adwaita
-gtk-font-name=Liberation Sans 16
+gtk-font-name=Iosevka Fixed 13
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_TEXT
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
