--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -24,7 +24,7 @@ focus_follows_mouse no
 
 # Setting colors
 # class                 border  backgr. text    indctr. child_border
-client.focused          #222222 #777777 #ffffff #ffffff #777777
+client.focused          #222222 #777777 #ffffff #ffffff #aaaaaa
 client.focused_inactive #333333 #5f676a #ffffff #484e50 #222222
 client.unfocused        #333333 #222222 #888888 #292d2e #111111
 client.urgent           #333333 #900000 #ffffff #900000 #900000
