--- a/configs/gtk3-settings.ini
+++ b/configs/gtk3-settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=AdwaitaRefresh-darker
+gtk-theme-name=Adwaita
 gtk-icon-theme-name=Adwaita
 gtk-font-name=Iosevka Fixed 13
 gtk-cursor-theme-size=0
