--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -304,7 +304,7 @@ detect-client-leader = true
 # Specify a list of conditions of windows that should be painted with inverted color. 
 # Resource-hogging, and is not well tested.
 #
-# invert-color-include = []
+invert-color-include = ["class_g=\"Ghidra\""];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
 # Might cause incorrect opacity when rendering transparent content (but never 
