--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -24,6 +24,10 @@ bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 bind c new-window -c "#{pane_current_path}"
 
+# Terminal title
+set-option -g set-titles on
+set-option -g set-titles-string "#W - tmux #S"
+
 # CUAish bindings
 bind-key -T copy-mode C-f command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
 bind-key -T copy-mode C-c send-keys -X copy-pipe-and-cancel "xsel -i --clipboard"
