--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -26,7 +26,7 @@ bind c new-window -c "#{pane_current_path}"
 
 # Terminal title
 set-option -g set-titles on
-set-option -g set-titles-string "#W - tmux #S"
+set-option -g set-titles-string "#W - tmux #S:#{pane_pid}"
 
 # CUAish bindings
 bind-key -T copy-mode C-f command-prompt -i -I "#{pane_search_string}" -p "(search down)" "send -X search-forward-incremental \"%%%\""
