--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -8,6 +8,9 @@ set -g status-right '#(bar -a "battery clock host")'
 set -g status off
 bind T set -g status
 
+# Show the status bar if is in ssh session
+if-shell -b '[ "$SSH_CONNECTION" ]' 'set -g status on'
+
 # Fish :)
 set-option -g default-shell /usr/bin/fish
 
