--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -10,6 +10,9 @@ for_window [class=.*__stickme__.*] sticky enable
 for_window [title=.*__stickme__.*] sticky enable
 for_window [title=dragon] sticky enable
 
+# Workspace sliding hack
+for_window [class="feh"] floating enable, sticky enable, border none, move absolute position 0 px 0 px
+
 # Hide borders if only one window is in the current workspace
 hide_edge_borders smart
 
