--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -153,7 +153,8 @@ fade-delta = 2
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = [ "80:name = 'i3lock'" ]
+opacity-rule = ["80:name = 'i3lock'",
+                "85:class_g = 'dmenu'"]
 
 
 #################################
@@ -199,7 +200,7 @@ blur-kern = "7x7box";
 #  "window_type = 'desktop'",
 #  "_GTK_FRAME_EXTENTS@:c"
 #];
-blur-background-exclude = "!(name = 'i3lock')";
+blur-background-exclude = "!(name='i3lock' || class_g='dmenu')";
 
 #################################
 #       General Settings        #
