--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -309,8 +309,7 @@ invert-color-include = [
   "class_g=\"Ghidra\"",
   "class_g=\"com-baselet-standalone-MainStandalone\"",
   "class_g=\"robotc.exe\"",
-  "class_g=\"com-cburch-logisim-Main\"",
-  "name=\"Windows 7 [Running] - Oracle VM VirtualBox\""
+  "class_g=\"com-cburch-logisim-Main\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
