--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -6,8 +6,6 @@
 # Enabled client-side shadows on windows. Note desktop windows 
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
-#
-# shadow = false
 shadow = true;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
@@ -24,16 +22,6 @@ shadow-offset-x = -7;
 # The top offset for shadows, in pixels. (defaults to -15)
 # shadow-offset-y = -15
 shadow-offset-y = -7;
-
-# Avoid drawing shadows on dock/panel windows. This option is deprecated,
-# you should use the *wintypes* option in your config file instead.
-#
-# no-dock-shadow = false
-
-# Don't draw shadows on drag-and-drop windows. This option is deprecated, 
-# you should use the *wintypes* option in your config file instead.
-#
-# no-dnd-shadow = false
 
 # Red color value of shadow (0.0 - 1.0, defaults to 0).
 # shadow-red = 0
@@ -100,10 +88,11 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 2
+fade-delta = 7
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
+fade-exclude = "!(name='i3lock' || class_g='dmenu')"
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
