--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -92,7 +92,7 @@ fade-delta = 7
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
-fade-exclude = "!(name='i3lock' || class_g='dmenu')"
+fade-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')"
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
@@ -143,7 +143,8 @@ fade-exclude = "!(name='i3lock' || class_g='dmenu')"
 #
 # opacity-rule = []
 opacity-rule = ["80:name = 'i3lock'",
-                "85:class_g = 'dmenu'"]
+                "85:class_g = 'dmenu'",
+                "85:class_g *= '__blurme__'"]
 
 
 #################################
@@ -189,7 +190,7 @@ blur-kern = "7x7box";
 #  "window_type = 'desktop'",
 #  "_GTK_FRAME_EXTENTS@:c"
 #];
-blur-background-exclude = "!(name='i3lock' || class_g='dmenu')";
+blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
 
 #################################
 #       General Settings        #
