--- a/configs/tmux.conf
+++ b/configs/tmux.conf
@@ -11,8 +11,8 @@ bind T set -g status
 # Show the status bar if is in ssh session
 if-shell -b '[ "$SSH_CONNECTION" ]' 'set -g status on'
 
-# Fish :)
-set-option -g default-shell /usr/bin/fish
+# Shell
+set-option -g default-command 'exec /bin/bash'
 
 # Enable locking
 set -g lock-command vlock
