--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -4,6 +4,7 @@ for_window [class="^.*"] border pixel 2
 # Floating windows
 for_window [class=.*__floatme__.*] floating enable
 for_window [title=.*__floatme__.*] floating enable
+for_window [title=.*Citrix.*] floating enable
 
 # Sticking windows
 for_window [class=.*__stickme__.*] sticky enable
