--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -299,7 +299,10 @@ invert-color-include = [
   "class_g=\"Ghidra\"",
   "class_g=\"com-baselet-standalone-MainStandalone\"",
   "class_g=\"robotc.exe\"",
-  "class_g=\"com-cburch-logisim-Main\""
+  "class_g=\"com-cburch-logisim-Main\"",
+  "class_i=\"winword.exe\"",
+  "class_i=\"powerpnt.exe\"",
+  "class_i=\"excel.exe\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
