--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -302,8 +302,7 @@ invert-color-include = [
   "class_g=\"com-cburch-logisim-Main\"",
   "class_i=\"winword.exe\"",
   "class_i=\"powerpnt.exe\"",
-  "class_i=\"excel.exe\"",
-  "class_i=\"Fritzing\""
+  "class_i=\"excel.exe\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
