--- a/configs/mednafen.cfg
+++ b/configs/mednafen.cfg
@@ -564,7 +564,7 @@ command.device_select8 keyboard 0x0 37+ctrl+shift
 command.device_select9 keyboard 0x0 38+ctrl+shift
 
 ;Exit
-command.exit keyboard 0x0 69 || keyboard 0x0 41
+command.exit keyboard 0x0 41
 
 ;Fast-forward
 command.fast_forward keyboard 0x0 53
@@ -5694,10 +5694,10 @@ player.yscalefs 1.000000
 psx.bios_eu scph5502.bin
 
 ;Path to the Japan SCPH-5500/v3.0J ROM BIOS
-psx.bios_jp scph5500.bin
+psx.bios_jp /mnt/hdd1/Public/Games/psx/mednafen-images/scph5500.bin
 
 ;Path to the North America SCPH-5501/v3.0A ROM BIOS
-psx.bios_na scph5501.bin
+psx.bios_na /mnt/hdd1/Public/Games/psx/mednafen-images/scph5501.bin
 
 ;Enable BIOS ROM image sanity checks.
 psx.bios_sanity 1
