--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -108,7 +108,7 @@ fade-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')"
 
 # Opacity of inactive windows. (0.1 - 1.0, defaults to 1.0)
 # inactive-opacity = 1;
-# inactive-opacity = 0.8;
+inactive-opacity = 0.8;
 
 # Opacity of window titlebars and borders. (0.1 - 1.0, disabled by default)
 # frame-opacity = 1.0;
@@ -142,9 +142,12 @@ fade-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')"
 #    opacity-rule = [ "80:class_g = 'URxvt'" ];
 #
 # opacity-rule = []
-opacity-rule = ["80:name = 'i3lock'",
-                "85:class_g = 'dmenu'",
-                "85:class_g *= '__blurme__'"]
+opacity-rule = ["70:name = 'i3lock'",
+                "70:class_g = 'dmenu'",
+                "70:class_g = 'Dunst'",
+#                "70:class_g = 'Emacs' && !focused",
+#                "70:class_g *= 'st' && !focused",
+                "70:class_g *= '__blurme__'"]
 
 
 #################################
@@ -153,7 +156,7 @@ opacity-rule = ["80:name = 'i3lock'",
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-# blur-method = 
+blur-method = "dual_kawase";
 # blur-size = 12
 #
 # blur-deviation = false
@@ -181,7 +184,8 @@ blur-background = true
 #   blur-kern = "5,5,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1";
 #
 # blur-kern = ''
-blur-kern = "7x7box";
+# blur-kern = "7x7box";
+blur-strength = 5;
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
@@ -190,7 +194,7 @@ blur-kern = "7x7box";
 #  "window_type = 'desktop'",
 #  "_GTK_FRAME_EXTENTS@:c"
 #];
-blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
+# blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
 
 #################################
 #       General Settings        #
