--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -88,11 +88,11 @@ fade-in-step = 0.03;
 fade-out-step = 0.03;
 
 # The time between steps in fade step, in milliseconds. (> 0, defaults to 10)
-fade-delta = 7
+fade-delta = 3
 
 # Specify a list of conditions of windows that should not be faded.
 # fade-exclude = []
-fade-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')"
+# fade-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')"
 
 # Do not fade on window open/close.
 # no-fading-openclose = false
