--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -122,7 +122,7 @@ inactive-opacity = 0.8;
 # inactive-opacity-override = false;
 
 # Default opacity for active windows. (0.0 - 1.0, defaults to 1.0)
-# active-opacity = 1.0
+active-opacity = 1.0;
 
 # Dim inactive windows. (0.0 - 1.0, defaults to 0.0)
 # inactive-dim = 0.0
@@ -145,8 +145,8 @@ inactive-opacity = 0.8;
 opacity-rule = ["70:name = 'i3lock'",
                 "70:class_g = 'dmenu'",
                 "70:class_g = 'Dunst'",
-#                "70:class_g = 'Emacs' && !focused",
-#                "70:class_g *= 'st' && !focused",
+                "95:class_g = 'Emacs' && focused",
+                "95:class_g = 'st-256color' && focused",
                 "70:class_g *= '__blurme__'"]
 
 
@@ -189,11 +189,12 @@ blur-strength = 5;
 
 # Exclude conditions for background blur.
 # blur-background-exclude = []
-#blur-background-exclude = [
-#  "window_type = 'dock'",
-#  "window_type = 'desktop'",
-#  "_GTK_FRAME_EXTENTS@:c"
-#];
+blur-background-exclude = [
+#    "window_type = 'dock'",
+    "window_type = 'desktop'",
+    "_GTK_FRAME_EXTENTS@:c",
+    "class_g = 'Empty'"
+];
 # blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
 
 #################################
