--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -433,6 +433,6 @@ wintypes:
   tooltip = { fade = true; shadow = true; opacity = 0.75; focus = true; full-shadow = false; };
   dock = { shadow = false; }
   dnd = { shadow = false; }
-  popup_menu = { opacity = 1; }
-  dropdown_menu = { opacity = 1; }
+  popup_menu = { shadow = false; opacity = 0.8; }
+  dropdown_menu = { shadow = false; opacity = 0.8; }
 };
