--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -307,7 +307,8 @@ invert-color-include = [
   "class_g=\"com-cburch-logisim-Main\"",
   "class_i=\"winword.exe\"",
   "class_i=\"powerpnt.exe\"",
-  "class_i=\"excel.exe\""
+  "class_i=\"excel.exe\"",
+  "class_g=\"Flashtool\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
