--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -193,6 +193,7 @@ blur-background-exclude = [
 #    "window_type = 'dock'",
     "window_type = 'desktop'",
     "_GTK_FRAME_EXTENTS@:c",
+    "class_g = 'maim'",
     "class_g = 'Empty'"
 ];
 # blur-background-exclude = "!(name='i3lock' || class_g='dmenu' || class_g*='__blurme__')";
