--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -193,6 +193,9 @@ blur-background-exclude = [
 #    "window_type = 'dock'",
     "window_type = 'desktop'",
     "_GTK_FRAME_EXTENTS@:c",
+    "class_i=\"winword.exe\"",
+    "class_i=\"powerpnt.exe\"",
+    "class_i=\"excel.exe\"",
     "class_g = 'maim'",
     "class_g = 'Empty'"
 ];
@@ -306,9 +309,9 @@ invert-color-include = [
   "class_g=\"com-baselet-standalone-MainStandalone\"",
   "class_g=\"robotc.exe\"",
   "class_g=\"com-cburch-logisim-Main\"",
-  "class_i=\"winword.exe\"",
-  "class_i=\"powerpnt.exe\"",
-  "class_i=\"excel.exe\"",
+  # "class_i=\"winword.exe\"",
+  # "class_i=\"powerpnt.exe\"",
+  # "class_i=\"excel.exe\"",
   "class_g=\"Flashtool\""
 ];
 
