--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -4,12 +4,13 @@ for_window [class="^.*"] border pixel 2
 # Floating windows
 for_window [class=.*__floatme__.*] floating enable
 for_window [title=.*__floatme__.*] floating enable
-for_window [title=.*Citrix.*] floating enable
+for_window [title=.*Citrix.*]      floating enable
+for_window [class=Pavucontrol]     floating enable
 
 # Sticking windows
 for_window [class=.*__stickme__.*] sticky enable
 for_window [title=.*__stickme__.*] sticky enable
-for_window [title=dragon] sticky enable
+for_window [title=dragon]          sticky enable
 
 # Workspace sliding hack
 for_window [class="feh"] floating enable, sticky enable, border none, move absolute position 0 px 0 px
