--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -6,6 +6,7 @@ for_window [class=.*__floatme__.*] floating enable
 for_window [title=.*__floatme__.*] floating enable
 for_window [title=.*Citrix.*]      floating enable
 for_window [class=Pavucontrol]     floating enable
+for_window [class=Arandr]          floating enable
 
 # Sticking windows
 for_window [class=.*__stickme__.*] sticky enable
