--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -7,6 +7,7 @@ for_window [title=.*__floatme__.*] floating enable
 for_window [title=.*Citrix.*]      floating enable
 for_window [class=Pavucontrol]     floating enable
 for_window [class=Arandr]          floating enable
+for_window [title="Python Turtle Graphics"] floating enable
 
 # Sticking windows
 for_window [class=.*__stickme__.*] sticky enable
