--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -145,8 +145,8 @@ active-opacity = 1.0;
 opacity-rule = ["70:name = 'i3lock'",
                 "70:class_g = 'dmenu'",
                 "70:class_g = 'Dunst'",
-                "95:class_g = 'Emacs' && focused",
-                "95:class_g = 'st-256color' && focused",
+                "90:class_g = 'Emacs' && focused",
+                "90:class_g = 'st-256color' && focused",
                 "70:class_g *= '__blurme__'"]
 
 
@@ -228,8 +228,8 @@ vsync = true
 mark-wmwin-focused = true;
 
 # Mark override-redirect windows that doesn't have a child window with 'WM_STATE' focused.
-# mark-ovredir-focused = false
-mark-ovredir-focused = true;
+# https://www.reddit.com/r/archlinux/comments/fpr0sj/inactive_opacity_not_working_in_picom/
+mark-ovredir-focused = false;
 
 # Try to detect windows with rounded corners and don't consider them 
 # shaped windows. The accuracy is not very high, unfortunately.
