--- a/configs/i3.conf
+++ b/configs/i3.conf
@@ -1,5 +1,9 @@
 # Border size
-for_window [class="^.*"] border pixel 2
+for_window [all] border pixel 2
+# for_window [all] border normal 1
+
+# The middle button over a titlebar kills the window
+bindsym --release button2 kill
 
 # Floating windows
 for_window [class=.*__floatme__.*] floating enable
@@ -21,7 +25,7 @@ for_window [class="feh"] floating enable, sticky enable, border none, move absol
 hide_edge_borders smart
 
 # Font for window titles. Will also be used by the bar unless a different font
-font pango:Iosevka Fixed 12.5
+font pango:Iosevka Fixed 11
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier Mod4
@@ -31,10 +35,10 @@ focus_follows_mouse no
 
 # Setting colors
 # class                 border  backgr. text    indctr. child_border
-client.focused          #222222 #777777 #ffffff #ffffff #aaaaaa
-client.focused_inactive #333333 #5f676a #ffffff #484e50 #222222
-client.unfocused        #333333 #222222 #888888 #292d2e #111111
-client.urgent           #333333 #900000 #ffffff #900000 #900000
+client.focused          #aaaaaa #000000 #ffffff #ffffff #aaaaaa
+client.focused_inactive #222222 #000000 #aaaaaa #484e50 #222222
+client.unfocused        #111111 #222222 #888888 #292d2e #111111
+client.urgent           #900000 #900000 #ffffff #900000 #900000
 client.placeholder      #000000 #0c0c0c #ffffff #000000 #0c0c0c
 client.background       #ffffff
 
