--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -309,9 +309,9 @@ invert-color-include = [
   "class_g=\"com-baselet-standalone-MainStandalone\"",
   "class_g=\"robotc.exe\"",
   "class_g=\"com-cburch-logisim-Main\"",
-  # "class_i=\"winword.exe\"",
-  # "class_i=\"powerpnt.exe\"",
-  # "class_i=\"excel.exe\"",
+  "class_i=\"winword.exe\"",
+  "class_i=\"powerpnt.exe\"",
+  "class_i=\"excel.exe\"",
   "class_g=\"Flashtool\""
 ];
 
