--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -6,7 +6,7 @@
 # Enabled client-side shadows on windows. Note desktop windows 
 # (windows with '_NET_WM_WINDOW_TYPE_DESKTOP') never get shadow, 
 # unless explicitly requested using the wintypes option.
-shadow = true;
+shadow = false;
 
 # The blur radius for shadows, in pixels. (defaults to 12)
 # shadow-radius = 12
@@ -51,6 +51,7 @@ shadow-offset-y = -7;
 # shadow-exclude = []
 shadow-exclude = [
   "name = 'Notification'",
+  "class_g = 'Dunst'",
   "class_g = 'Conky'",
   "class_g ?= 'Notify-osd'",
   "class_g = 'Cairo-clock'",
@@ -148,6 +149,23 @@ opacity-rule = ["70:name = 'i3lock'",
                 "90:class_g = 'Emacs' && focused",
                 "90:class_g = 'st-256color' && focused",
                 "70:class_g *= '__blurme__'"]
+
+
+#################################
+#           Corners             #
+#################################
+
+# Sets the radius of rounded window corners. When > 0, the compositor will
+# round the corners of windows. Does not interact well with
+# `transparent-clipping`.
+corner-radius = 10;
+round-borders = 2;
+
+# Exclude conditions for rounded corners.
+rounded-corners-exclude = [
+  "window_type = 'dock'",
+  "window_type = 'desktop'"
+];
 
 
 #################################
