--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -1,3 +1,8 @@
+# github.com/pijulius/picom: possible workspace slide animation
+# picom-jonaburg-git: windows animations, dual_kawase blur, rounded corners from ibhagwan, fade is (sometimes?) broken, buggy
+# picom-ibhagwan-git: dual_kawase blur, rounded corners
+
+
 #################################
 #             Shadows           #
 #################################
@@ -162,10 +167,18 @@ corner-radius = 10;
 round-borders = 2;
 
 # Exclude conditions for rounded corners.
-rounded-corners-exclude = [
-  "window_type = 'dock'",
-  "window_type = 'desktop'"
-];
+# rounded-corners-exclude = [
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
+
+rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu')"
+
+# rounded-corners-exclude = [
+#   "focused",
+#   "window_type = 'dock'",
+#   "window_type = 'desktop'"
+# ];
 
 
 #################################
