--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -172,7 +172,7 @@ round-borders = 2;
 #   "window_type = 'desktop'"
 # ];
 
-rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu')"
+rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu' || class_g='__floatme__')"
 
 # rounded-corners-exclude = [
 #   "focused",
