--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -151,6 +151,7 @@ active-opacity = 1.0;
 opacity-rule = ["70:name = 'i3lock'",
                 "70:class_g = 'dmenu'",
                 "70:class_g = 'Dunst'",
+                "80:class_g = 'Gsimplecal'",
                 "90:class_g = 'Emacs' && focused",
                 "90:class_g = 'st-256color' && focused",
                 "70:class_g *= '__blurme__'"]
@@ -172,7 +173,7 @@ round-borders = 2;
 #   "window_type = 'desktop'"
 # ];
 
-rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu' || class_g='__floatme__')"
+rounded-corners-exclude = "!(class_g='Dunst' || class_g='trayer' || class_g='Gsimplecal' || class_g='dmenu' || class_g='Dragon' || class_g*='__floatme__' || class_i*='__floatme__')"
 
 # rounded-corners-exclude = [
 #   "focused",
@@ -224,9 +225,9 @@ blur-background-exclude = [
 #    "window_type = 'dock'",
     "window_type = 'desktop'",
     "_GTK_FRAME_EXTENTS@:c",
-    "class_i=\"winword.exe\"",
-    "class_i=\"powerpnt.exe\"",
-    "class_i=\"excel.exe\"",
+#    "class_i=\"winword.exe\"",
+#    "class_i=\"powerpnt.exe\"",
+#    "class_i=\"excel.exe\"",
     "class_g = 'maim'",
     "class_g = 'Empty'"
 ];
