--- a/configs/picom.conf
+++ b/configs/picom.conf
@@ -82,8 +82,8 @@ shadow-exclude = [
 
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
-# fading = false
-fading = true
+fading = false
+# fading = true
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -344,7 +344,8 @@ invert-color-include = [
   "class_i=\"winword.exe\"",
   "class_i=\"powerpnt.exe\"",
   "class_i=\"excel.exe\"",
-  "class_g=\"Flashtool\""
+  "class_g=\"Flashtool\"",
+  "class_g=\"Octave\" && name*=\"Figure\""
 ];
 
 # GLX backend: Avoid using stencil buffer, useful if you don't have a stencil buffer. 
